--- a/home/home.css
+++ b/home/home.css
@@ -129,6 +129,8 @@ main {
 #topNav {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	gap: 8px;
 	position: fixed;
 	top: 50%;
